force-app/main/default/objects/Project_Budget__c/Project_Budget__c.object-meta.xml
<CustomObject>
    <label>Project Budget</label>
    <nameField>
        <label>Budget Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Budget</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>