force-app/main/default/objects/Project_Budget__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <formula>Manpower_Cost__c  +  General_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>