force-app/main/default/objects/Project_Budget__c/fields/Budget_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Budget_Remaining__c</fullName>
    <formula>Budgeted_Cost__c  -  Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>