force-app/main/default/objects/Project_Budget__c/fields/Deviation__c.field-meta.xml
<CustomField>
    <fullName>Deviation__c</fullName>
    <formula>Actual_Cost__c  -  Budgeted_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deviation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>