force-app/main/default/objects/Project_Budget__c/fields/DeviationPer__c.field-meta.xml
<CustomField>
    <fullName>DeviationPer__c</fullName>
    <formula>ABS(Deviation__c)/Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deviation%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>