force-app/main/default/objects/Project_Budget__c/fields/General_Expenses__c.field-meta.xml
<CustomField>
    <fullName>General_Expenses__c</fullName>
    <label>General Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>