force-app/main/default/objects/Project_Budget__c/fields/Manpower_Cost__c.field-meta.xml
<CustomField>
    <fullName>Manpower_Cost__c</fullName>
    <label>Manpower Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>