force-app/main/default/objects/Project_Budget__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Project Budget</relationshipLabel>
    <relationshipName>Project_Budget</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>